@@ -8,6 +8,7 @@
 - fix current page when is inside outer window
 - Support record select with polymorphic associations
 - Fix column count in inline adapter for forms and views
+- Add support for class prefix on human condition helpers
 
 = 3.2.16
 - Fix use of column.css_class in form when is a proc, it wasn't skipped when form was a columns group
